--- a/frontend/styles/Footer.module.scss
+++ b/frontend/styles/Footer.module.scss
@@ -6,8 +6,5 @@
   font-size: 1.1rem;
   margin-top: 0;
   width: 100vw;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  z-index: 100;
+  position: static;
 }
